[package]
name = "monarch"
version = "0.1.0"
edition = "2021"

[lib]
name = "monarch"
path = "./lib/lib.rs"

[[bin]]
name = "set_get_sample"
path = "./examples/set_get_sample.rs"

[[bin]]
name = "async_sample"
path = "./examples/async_sample.rs"

[dependencies]
async-stream = "0.3.6"
futures = "0.3.31"

[dev-dependencies]
futures = "0.3.31"
futures-util = "0.3"
tokio = { version = "1.46.1", features = ["full"] }

