# follow instructions from https://doc.rust-lang.org/cargo/reference/publishing.html

[package]
name = "monarch"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Implementation of a single writer multiple readers cell of memory for non atomic types"
homepage = "https://github.com/andreacasalino/monarch/blob/master/ReadMe.md"
repository = "https://github.com/andreacasalino/monarch"
readme = "ReadMe.md"
keywords = ["cell", "single writer", "multiple readers"]

[lib]
name = "monarch"
path = "./lib/lib.rs"

[[bin]]
name = "set_get_sample"
path = "./examples/set_get_sample.rs"

[[bin]]
name = "async_sample"
path = "./examples/async_sample.rs"

[dependencies]
async-stream = "0.3.6"
futures = "0.3.31"

[dev-dependencies]
futures = "0.3.31"
futures-util = "0.3"
tokio = { version = "1.46.1", features = ["full"] }

